# simple-interface

./: BUGS.org  meson.build  meson_options.txt  wayland-client.cpp
include/: unique_any.hpp
include/si/: egl.hpp  shm_buffer.hpp  ui.hpp  util.hpp  vk_renderer.hpp  wl.hpp
include/si/X/: display.hpp  glx_display.hpp  xcb_display.hpp
include/si/wl/: buffer.hpp  compositor.hpp  display.hpp  egl_window.hpp  keyboard.hpp  pointer.hpp  registry.hpp  seat.hpp  shell.hpp  shell_surface.hpp  shm.hpp  shm_pool.hpp  surface.hpp
include/si/wlp/: xdg_shell.hpp
src/: buffer.cpp  client.cpp  compositor.cpp  display.cpp  egl.cpp  egl_window.cpp  registry.cpp  seat.cpp  shader.frag  shader.vert  shell.cpp  shell_surface.cpp  shm.cpp  shm_buffer.cpp  shm_pool.cpp  surface.cpp  ui.cpp  vk_renderer.cpp  wayland-client.cpp  wl.cpp
src/X/: glx_display.cpp  xcb_display.cpp
src/si/: util.cpp
src/si/wlp/: xdg_shell.cpp
src/wl/: keyboard.cpp  pointer.cpp
tools/: wayland-scanner-cpp.py
